--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>MURALS 2012-2020</p>
   <img src="mobileMural/mural0.jpg">
 <img src="mobileMural/mural1.jpg">
-<p>ford building 2018</p>
+<p>ford building september 2018</p>
 <img src="mobileMural/mural2.jpg">
 <img src="mobileMural/mural3.jpg">
 <img src="mobileMural/mural4.jpg">
