work on menu bar

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 <body>
  <header>
-  <p class="title">WC Bevan</p>
-  <img src="mobileMural/mural14.jpg">
- </header>
+  <div class="nameBanner">W.C. Bevan</div>
+  <div class="menuBar">
+    <ul>
+      <li>Murals</li>
+      <li>Painting</li>
+      <li>Cacography</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+</header>
  <div class="homeContainer">
+  <img src="mobileMural/mural14.jpg">
   <p>MURALS 2012-2020</p>
   <img src="mobileMural/mural0.jpg">
 <img src="mobileMural/mural1.jpg">
