--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="nameBanner">W.C. Bevan</div>
   <div class="menuBar">
     <ul>
-      <li>Murals</li>
+      <li><a href=index.html>Murals</a></li>
       <li>Painting</li>
-      <li>Cacography</li>
+      <li><a href=caco.html>Cacography</a></li>
       <li>Contact</li>
     </ul>
   </div>
