html layout work

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
  <header>
-  <div class="nameBanner">W.C. Bevan</div>
+  <div class="nameBanner"><p>W.C. Bevan</p></div>
   <div class="menuBar">
+    
     <ul>
       <li><a href=index.html>Murals</a></li>
       <li>Painting</li>
@@ -19,16 +20,22 @@
   </div>
 </header>
  <div class="homeContainer">
-  <img src="mobileMural/mural14.jpg">
+  <img class="landingImg" src="mobileMural/landingBackground.jpg">
   <p>MURALS 2012-2020</p>
   <img src="mobileMural/mural0.jpg">
+  <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural1.jpg">
-<p>ford building september 2018</p>
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural2.jpg">
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural3.jpg">
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural4.jpg">
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural5.jpg">
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural6.jpg">
+<p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural7.jpg">
 <img src="mobileMural/mural8.jpg">
 <img src="mobileMural/mural9.jpg">
