--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     
     <ul>
       <li><a href=index.html>Murals</a></li>
-      <li>Painting</li>
+      
       <li><a href=caco.html>Cacography</a></li>
       <li>Contact</li>
     </ul>
   </div>
+  <img class="landingImg" src="mobileMural/landingBackground.jpg">
 </header>
  <div class="homeContainer">
-  <img class="landingImg" src="mobileMural/landingBackground.jpg">
-  <p>MURALS 2012-2020</p>
+  
+  <h4>Murals 2012-2020</h4>
   <img src="mobileMural/mural0.jpg">
   <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural1.jpg">
