layout work continued

--- a/caco.html
+++ b/caco.html
@@ -11,53 +11,57 @@
 <body>
  <header>
 <div class="nameBanner">
-   <p>W.C. Bevan</p>
-</div>
-  <div class="menuBar">
-   <ul>
-    <li><a href=index.html>Murals</a></li>
-    
-    <li><a href=caco.html>Cacography</a></li>
-    <li>Contact</li>
-   </ul>
+    <!--Below is a dummy div for centering name-->
+    <div class="hamburger"></div>
+    <!--end of dummy div-->
+    <div class="handstyle"><img class="handstylePic" src="name.jpg">
+    </div>
+    <div class="hamburger"><a href=caco.html>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </a></div>
+  </div>
+  <div class="muralLink">
+   <a href=index.html>Murals</a>
   </div>
 <img class="landingImg" src="mobileCacography/cacoLanding.jpg">
  </header>
  <div class="homeContainer">
    <h4>Cacography 2012-2020</h4>
-  <img src="mobileCacography/caco10.jpg">
+  <img class="cacoPics" src="mobileCacography/caco10.jpg">
   
-  <img src="mobileCacography/caco2.jpg">
-  <img src="mobileCacography/caco3.jpg">
-  <img src="mobileCacography/caco4.jpg">
-  <img src="mobileCacography/caco5.jpg">
-  <img src="mobileCacography/caco6.jpg">
-  <img src="mobileCacography/caco7.jpg">
-  <img src="mobileCacography/caco8.jpg">
-  <img src="mobileCacography/caco9.jpg">
-  <img src="mobileCacography/caco10.jpg">
-  <img src="mobileCacography/caco11.jpg">
-  <img src="mobileCacography/caco12.jpg">
-  <img src="mobileCacography/caco13.jpg">
-  <img src="mobileCacography/caco14.jpg">
-  <img src="mobileCacography/caco15.jpg">
-  <img src="mobileCacography/caco16.jpg">
-  <img src="mobileCacography/caco17.jpg">
-   <img src="mobileCacography/caco18.jpg">
-   <img src="mobileCacography/caco19.jpg">
-   <img src="mobileCacography/caco20.jpg">
-   <img src="mobileCacography/caco21.jpg">
-   <img src="mobileCacography/caco22.jpg">
-   <img src="mobileCacography/caco23.jpg">
-   <img src="mobileCacography/caco24.jpg">
-   <img src="mobileCacography/caco25.jpg">
-   <img src="mobileCacography/caco26.jpg">
-    <img src="mobileCacography/caco27.jpg">
-    <img src="mobileCacography/caco28.jpg">
-    <img src="mobileCacography/caco29.jpg">
-    <img src="mobileCacography/caco30.jpg">
-    <img src="mobileCacography/caco31.jpg">
-    <img src="mobileCacography/caco32.jpg">
+  <img class="cacoPics" src="mobileCacography/caco2.jpg">
+  <img class="cacoPics" src="mobileCacography/caco3.jpg">
+  <img class="cacoPics" src="mobileCacography/caco4.jpg">
+  <img class="cacoPics" src="mobileCacography/caco5.jpg">
+  <img class="cacoPics" src="mobileCacography/caco6.jpg">
+  <img class="cacoPics" src="mobileCacography/caco7.jpg">
+  <img class="cacoPics" src="mobileCacography/caco8.jpg">
+  <img class="cacoPics" src="mobileCacography/caco9.jpg">
+  <img class="cacoPics" src="mobileCacography/caco10.jpg">
+  <img class="cacoPics" src="mobileCacography/caco11.jpg">
+  <img class="cacoPics" src="mobileCacography/caco12.jpg">
+  <img class="cacoPics" src="mobileCacography/caco13.jpg">
+  <img class="cacoPics" src="mobileCacography/caco14.jpg">
+  <img class="cacoPics" src="mobileCacography/caco15.jpg">
+  <img class="cacoPics" src="mobileCacography/caco16.jpg">
+  <img class="cacoPics" src="mobileCacography/caco17.jpg">
+   <img class="cacoPics" src="mobileCacography/caco18.jpg">
+   <img class="cacoPics" src="mobileCacography/caco19.jpg">
+   <img class="cacoPics" src="mobileCacography/caco20.jpg">
+   <img class="cacoPics" src="mobileCacography/caco21.jpg">
+   <img class="cacoPics" src="mobileCacography/caco22.jpg">
+   <img class="cacoPics" src="mobileCacography/caco23.jpg">
+   <img class="cacoPics" src="mobileCacography/caco24.jpg">
+   <img class="cacoPics" src="mobileCacography/caco25.jpg">
+   <img class="cacoPics" src="mobileCacography/caco26.jpg">
+    <img class="cacoPics" src="mobileCacography/caco27.jpg">
+    <img class="cacoPics" src="mobileCacography/caco28.jpg">
+    <img class="cacoPics" src="mobileCacography/caco29.jpg">
+    <img class="cacoPics" src="mobileCacography/caco30.jpg">
+    <img class="cacoPics" src="mobileCacography/caco31.jpg">
+    <img class="cacoPics" src="mobileCacography/caco32.jpg">
  </div>
 
 </body>
