--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
  <header>
-  <div class="nameBanner"><p>W.C. Bevan</p></div>
-  <div class="menuBar">
-    
-    <ul>
-      <li><a href=index.html>Murals</a></li>
-      
-      <li><a href=caco.html>Cacography</a></li>
-      <li>Contact</li>
-    </ul>
+  <div class="nameBanner">
+    <!--Below is a dummy div for centering name-->
+    <div class="hamburger"></div>
+    <!--end of dummy div-->
+    <div class="handstyle"><img class="handstylePic" src="name.jpg">
+    </div>
+    <div class="hamburger"><a href=caco.html>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </a></div>
   </div>
+  
   <img class="landingImg" src="mobileMural/landingBackground.jpg">
 </header>
  <div class="homeContainer">
