work on menu bar

--- a/caco.html
+++ b/caco.html
@@ -28,7 +28,7 @@
 <img class="landingImg" src="mobileCacography/cacoLanding.jpg">
  </header>
  <div class="homeContainer">
-   <h4>Cacography 2012-2020</h4>
+   <h4>Cacography Gallery</h4>
   <img class="cacoPics" src="mobileCacography/caco10.jpg">
   
   <img class="cacoPics" src="mobileCacography/caco2.jpg">
