--- a/index.html
+++ b/index.html
@@ -8,24 +8,36 @@
 </head>
 <body>
  <header>
-  <div class="nameBanner">
+  <div class="banner">
     <!--Below is a dummy div for centering name-->
     <div class="hamburger"></div>
     <!--end of dummy div-->
-    <div class="handstyle"><img class="handstylePic" src="name.jpg">
+    <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
     </div>
-    <div class="hamburger"><a href=caco.html>
+    <div class="hamburger openMenu">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
       </a></div>
+      <div class="menu">
+        <div class="closeMenu">X</div>
+        <ul>
+          <li>Murals</li>
+          <li>Painting</li>
+          <li>Cocagraphy</li>
+          <li>Contact</li>
+        </ul>
+      </div>
   </div>
-  
+ 
   <img class="landingImg" src="mobileMural/landingBackground.jpg">
+  <div class="containContact">
+  <button class="contact">Contact for Commission</button>
+  
 </header>
  <div class="homeContainer">
   
-  <h4>Murals 2012-2020</h4>
+  <h4>Mural Gallery</h4>
   <img src="mobileMural/mural0.jpg">
   <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural1.jpg">
@@ -52,4 +64,5 @@
  </div>
  
 </body>
+<script src="script.js"></script>
 </html>
