--- a/caco.html
+++ b/caco.html
@@ -9,21 +9,29 @@
 </head>
 
 <body>
- <header>
-<div class="nameBanner">
+ 
+<header>
+  <div class="banner">
     <!--Below is a dummy div for centering name-->
     <div class="hamburger"></div>
     <!--end of dummy div-->
-    <div class="handstyle"><img class="handstylePic" src="name.jpg">
+    <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
     </div>
-    <div class="hamburger"><a href=caco.html>
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </a></div>
-  </div>
-  <div class="muralLink">
-   <a href=index.html>Murals</a>
+    <div class="hamburger openMenu">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+      </a>
+    </div>
+    <div class="menu">
+      <div class="closeMenu">X</div>
+      <ul>
+        <li><a href="index.html">Murals</a></li>
+        <li><a>Painting</a></li>
+        <li><a href="caco.html">Cacography</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </div>
   </div>
 <img class="landingImg" src="mobileCacography/cacoLanding.jpg">
  </header>
@@ -65,5 +73,5 @@
  </div>
 
 </body>
-
+<script src="script.js"></script>
 </html>
