--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+    
  <header>
   <div class="banner">
     <!--Below is a dummy div for centering name-->
@@ -22,11 +24,12 @@
       <div class="menu">
         <div class="closeMenu">X</div>
         <ul>
-          <li>Murals</li>
-          <li>Painting</li>
-          <li>Cocagraphy</li>
-          <li>Contact</li>
+          <li><a href="index.html">Murals</a></li>
+          <li><a>Painting</a></li>
+          <li><a href="caco.html">Cacography</a></li>
+          <li><a>Contact</a></li>
         </ul>
+        
       </div>
   </div>
  
@@ -37,20 +40,21 @@
 </header>
  <div class="homeContainer">
   
-  <h4>Mural Gallery</h4>
+  <h4 >Mural Gallery</h4>
+<div class="galleryHeader"></div>
   <img src="mobileMural/mural0.jpg">
   <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
-<img src="mobileMural/mural1.jpg">
+<img src="mobileMural/mural5.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
-<img src="mobileMural/mural2.jpg">
+<img src="mobileMural/mural6.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural3.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural4.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
-<img src="mobileMural/mural5.jpg">
+<img src="mobileMural/mural1.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
-<img src="mobileMural/mural6.jpg">
+<img src="mobileMural/mural2.jpg">
 <p>2456 Riopelle St<br>Detroit, MI 48207<br> 2015<br></p>
 <img src="mobileMural/mural7.jpg">
 <img src="mobileMural/mural8.jpg">
@@ -62,7 +66,8 @@
 <img src="mobileMural/mural14.jpg">
 <img src="mobileMural/mural15.jpg">
  </div>
- 
+</div>
+
 </body>
 <script src="script.js"></script>
 </html>
