--- a/caco.html
+++ b/caco.html
@@ -12,17 +12,20 @@
  
 <header>
   <div class="banner">
-    <!--Below is a dummy div for centering name-->
-    <div class="hamburger"></div>
-    <!--end of dummy div-->
-    <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
-    </div>
+  
     <div class="hamburger openMenu">
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
       </a>
     </div>
+    <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
+    </div>
+  
+    <!--Below is a dummy div for centering name-->
+    <div class="hamburger"></div>
+    <!--end of dummy div-->
+  
     <div class="menu">
       <div class="closeMenu">X</div>
       <ul>
@@ -31,12 +34,13 @@
         <li><a href="caco.html">Cacography</a></li>
         <li><a>Contact</a></li>
       </ul>
+  
     </div>
   </div>
 <img class="landingImg" src="mobileCacography/cacoLanding.jpg">
  </header>
  <div class="homeContainer">
-   <h4>Cacography Gallery</h4>
+   <h4 class="sectionHeader">Cacography Gallery</h4>
   <img class="cacoPics" src="mobileCacography/caco10.jpg">
   
   <img class="cacoPics" src="mobileCacography/caco2.jpg">
