--- a/caco.html
+++ b/caco.html
@@ -19,7 +19,7 @@
       <div class="line"></div>
       </a>
     </div>
-    <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
+    <div class="handstyleDiv"><img class="handstyleImage" src="handStyle.svg">
     </div>
   
     <!--Below is a dummy div for centering name-->
