--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <div class="line"></div>
     </a>
    </div>
-  <div class="handstyleDiv"><img class="handstyleImage" src="name.jpg">
+  <div class="handstyleDiv"><img class="handstyleImage" src="handStyle.svg">
     </div>
     
       <!--Below is a dummy div for centering name-->
-      <div class="hamburger"></div>
+      <div class="hamburger">
+        <img src="Path 2.svg">
+      </div>
       <!--end of dummy div-->
     
       <div class="menu">
