work on desktop

--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
  <header>
 
  <div class="nameContainer">
- <img class="w" src="w.png">
- <img class="wComma" src="wComma.png">
- <img class="c" src="c.png">
- <img class="cComma" src="cComma.png">
- <img class="bevan" src="bevan.png">
+ <img class="w" src="handStyle.png">
+ 
 </div>
 <div class="menuContainer">
  <p>menu</p>
 </div>
 </header>
-<div class="landingImg">
- 
+<div class="landingPageWindow">
+<div class="landingDiv">
+<img class="landingPic" src=wcLandingDesktop.jpg>
+ <div class="muralGalleryText"><p>Mural Map</p>
+<p>Gallery</p></div>
+</div>
+</div>
+<div class="mainBodyContainer">
+  <div class="bodyLeftColumn">
+    <img class="cacoMain" src="muralMain.jpg">
+    <img class="cacoMain" src="paintingMain.jpg">
+  </div>
+  <div class="bodyRightColumn">
+    <img class="cacoMain" src="drawingMain.jpg">
+    <img class="cacoMain" src="cacoMain.jpg">
+    
+  </div>
 </div>
 <footer>
  <div class="left-foot">
-  <img class="footer-title" src="handStyle.png" alt="">
+  <img class="footer-title" src="handStyleWhite.png" alt="">
   <p class="foot-content">Detroit Michigan</p>
  </div>
  <div class="middle-foot">
@@ -35,7 +47,7 @@
    bevanbevanbevan@gmail.com </p>
  </div>
  <div class="right-foot">
-   <img class="instagramIcon foot-content" src="instagram.png".
+   <img class="instagramIcon foot-content" src="instagram.png">
  </div>
 </footer>
 </body>
