work on mural gallery

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>WC Bevan</title>
  <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
  <header>
 
- <div class="nameContainer">
+<a href="index.html"><div class="nameContainer">
  <img class="w" src="handStyle.png">
  
 </div>
+</a>
 <div class="menuContainer">
  <p>menu</p>
 </div>
@@ -20,19 +21,34 @@
 <div class="landingPageWindow">
 <div class="landingDiv">
 <img class="landingPic" src=wcLandingDesktop.jpg>
- <div class="muralGalleryText"><p>Mural Map</p>
-<p>Gallery</p></div>
+ <div class="muralGalleryText"><a href="muralGallery.html"><p>Mural Gallery and Map</p></a>
+</div>
 </div>
 </div>
 <div class="mainBodyContainer">
+  
   <div class="bodyLeftColumn">
+    <a href="muralGallery.html"><div class="bodyOption">
+    <p class="bodyOptionText">Murals</p>
     <img class="cacoMain" src="muralMain.jpg">
-    <img class="cacoMain" src="paintingMain.jpg">
+    </a>
+    </div>
+    
+    <div class="bodyOption">
+    <p class="bodyOptionText">Drawings</p>
+    <img class="cacoMain" src="drawingMain.jpg">
+    </div>
   </div>
   <div class="bodyRightColumn">
-    <img class="cacoMain" src="drawingMain.jpg">
+    <div class="bodyOption">
+    <p class="bodyOptionText">Paintings</p>
+    <img class="cacoMain" src="paintingMain.jpg">
+    </div>
+    <div class="bodyOption">
+    <p class="bodyOptionText">Cocagraphy</p>
     <img class="cacoMain" src="cacoMain.jpg">
     
+    </div>
   </div>
 </div>
 <footer>
