--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="landingPageWindow">
 <div class="landingDiv">
 <img class="landingPic" src=wcLandingDesktop.jpg>
- <div class="muralGalleryText"><a href="muralGallery.html"><p>Mural Gallery and Map</p></a>
+ <div class="muralGalleryText"><a href="muralGallery.html"><p>Mural Gallery <img src="whiteMapIcon.png" class="landingMapIcon"></p> </a>
 </div>
 </div>
 </div>
