--- a/muralGallery.html
+++ b/muralGallery.html
@@ -22,16 +22,23 @@
   </div>
  </header>
  <div class="muralContainer">
-  <div class="leftArrow"><</div>
+  <div class="leftArrow"><img class="arrow"src="lftArrow.svg"></div>
   <div class="muralWindow">
    <div class="imgTrack">
-   <img class="muralPic" src="mural1.jpg">
+    <img class="muralPic test" src="mural1.jpg">
    <img class="muralPic" src="mural2.jpg">
    <img class="muralPic" src="mural3.jpg">
+
+   
    </div>
+  
   </div>
+  
   <div class="rightArrow">
-  ></div>
+  <img class="arrow" src="rtArrow.svg"></div>
+ </div>
+ <div class="muralDescription">
+  <img src="mapIcon.svg">here is the map
  </div>
  
 </body>
